name:               simulisp
version:            0.2
synopsis:           foobar
description:
    lorem ipsum
author:             Nguyễn Lê Thành Dũng, Thomas Bourgeat
cabal-version:      >= 1.6
build-type:         Simple

source-repository head
  type:     git
  location: git://github.com/threonorm/simulisp.git

executable simulator
    main-is:        Simulator/Main.hs
    ghc-options:    -O2 -main-is Simulator.Main
    build-depends:  array, base >= 4.6, containers, mtl, parsec >= 3.0,
                    vector >= 0.10, primitive >= 0.5, SDL >= 0.6.5

executable generate-processor
    main-is:        Processor/Hardware.hs
    ghc-options:    -O2 -main-is Processor.Hardware
    build-depends:  array, base >= 4.6, containers, mtl, parsec >= 3.0

executable software-model
    main-is:        Processor/SoftwareModel.hs
    ghc-options:    -O2 -main-is Processor.SoftwareModel
    build-depends:  array, base >= 4.6, containers, mtl, SDL >= 0.6.5

executable clock-program 
    main-is:        Lisp/ClockProgram.hs
    ghc-options:    -O2 -main-is Lisp.ClockProgram
    build-depends:  array, base >= 4.6, template-haskell, containers, mtl, parsec >= 3.0 

executable generate-microprogram 
    main-is:        Processor/Microcode.hs
    ghc-options:    -O2 -main-is Processor.Microcode
    build-depends:  array, base >= 4.6, containers, mtl

executable caillou-test
    main-is:        Examples/CaillouTest.hs
    ghc-options:    -O2 -main-is Examples.CaillouTest
    build-depends:  array, base >= 4.6, containers, mtl


